added the additional cloropeth maps

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -78,6 +78,9 @@
         let cancerTypes = [
             "lung",                // Lung Cancer Prevalence & Deaths
             "thyroid",             // Thyroid Cancer data
+            "prevalence",          // Lung Cancer Prevalence Rate
+            "deaths",              // Annual Lung Cancer Deaths
+            "development",         // Developed vs Developing Countries
             "radiation_exposure",  // Radiation Exposure by Country
             "smoking",             // Smoking by Country
             "obesity",             // Obesity by Country
